--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <link rel="shortcut icon" href="https://img.freepik.com/premium-vector/auto-car-logo-template-vector-icon_1948-6400.jpg" type="image/x-icon">
   <title>Автомобили и их виды</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=2.0">
-</head>
+  <meta> http-equiv="Content-Type" content="text/html; charset=utf-8"</meta>
+  <meta> name="viewport" content="width=device-width, initial-scale=2.0"</meta>
+ </head>
    <body style="background-color: #E6E6FA;">
        <h1 style="font-family:Arial, sans-serif;">Автомобили и их виды</h1>
        <h2>Что значит для нас Автомобиль</h2>
@@ -28,43 +28,5 @@
        </ul>
        <h7>Автор:ИЛЮХИН ИВАН</h7>
        <p>Электронная <a href="mailto:student25003@sch192.net"> ПОЧТА </a></p>
-      <!-- Code injected by live-server -->
-<script>
-	// <![CDATA[  <-- For SVG support
-	if ('WebSocket' in window) {
-		(function () {
-			function refreshCSS() {
-				var sheets = [].slice.call(document.getElementsByTagName("link"));
-				var head = document.getElementsByTagName("head")[0];
-				for (var i = 0; i < sheets.length; ++i) {
-					var elem = sheets[i];
-					var parent = elem.parentElement || head;
-					parent.removeChild(elem);
-					var rel = elem.rel;
-					if (elem.href && typeof rel != "string" || rel.length == 0 || rel.toLowerCase() == "stylesheet") {
-						var url = elem.href.replace(/(&|\?)_cacheOverride=\d+/, '');
-						elem.href = url + (url.indexOf('?') >= 0 ? '&' : '?') + '_cacheOverride=' + (new Date().valueOf());
-					}
-					parent.appendChild(elem);
-				}
-			}
-			var protocol = window.location.protocol === 'http:' ? 'ws://' : 'wss://';
-			var address = protocol + window.location.host + window.location.pathname + '/ws';
-			var socket = new WebSocket(address);
-			socket.onmessage = function (msg) {
-				if (msg.data == 'reload') window.location.reload();
-				else if (msg.data == 'refreshcss') refreshCSS();
-			};
-			if (sessionStorage && !sessionStorage.getItem('IsThisFirstTime_Log_From_LiveServer')) {
-				console.log('Live reload enabled.');
-				sessionStorage.setItem('IsThisFirstTime_Log_From_LiveServer', true);
-			}
-		})();
-	}
-	else {
-		console.error('Upgrade your browser. This Browser is NOT supported WebSocket for Live-Reloading.');
-	}
-	// ]]>
-</script>
-</body>
+      </body>
 </html>   
