--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html> lang.ru
 <head>
   <link rel="shortcut icon" href="https://img.freepik.com/premium-vector/auto-car-logo-template-vector-icon_1948-6400.jpg" type="image/x-icon">
   <title>Автомобили и их виды</title>
