--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <link rel="shortcut icon" href="https://img.freepik.com/premium-vector/auto-car-logo-template-vector-icon_1948-6400.jpg" type="image/x-icon">
   <title>Автомобили и их виды</title>
-  <meta> http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta> name="viewport" content="width=device-width, initial-scale=2.0">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=2.0">
  </head>
    <body style="background-color: #E6E6FA;">
        <h1 style="font-family:Arial, sans-serif;">Автомобили и их виды</h1>
