--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!doctype html>
-<html lang="ru">
+<!DOCTYPE html>
 <head>
   <link rel="shortcut icon" href="https://img.freepik.com/premium-vector/auto-car-logo-template-vector-icon_1948-6400.jpg" type="image/x-icon">
   <title>Автомобили и их виды</title>
