--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
            <li><a href="https://auto.mail.ru/article/111033-pervaya-mashina-v-mire/" target="_blank">auto.mail-Первая машина в мире: история создания</a></li>
        </ul>
        <h7>Автор:ИЛЮХИН ИВАН</h7>
-       <p>Электронная <a href="mailto:student25003@sch192.net"> ПОЧТА </a></p>
+       <p>Электронная <a href="mailto:student25003@sch192.net?body=привет"> почта </a></p>
       </body>
 </html>   
